Adaptar para PythonAnywhere: remover Docker/Fly.io, adicionar suporte MySQL/SQLite

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
 
 # Database
-psycopg2-binary==2.9.9
+mysqlclient==2.2.1
+PyMySQL==1.1.0
 
 # Data Processing
 openpyxl==3.1.2
@@ -13,11 +14,5 @@ pandas==2.1.4
 # Environment
 python-dotenv==1.0.0
 
-# Production Server
-gunicorn==21.2.0
-
-# Timezone (fallback for older Python)
+# Timezone
 pytz==2024.1
-
-# Build (optional - for creating executables)
-# pyinstaller==6.3.0
